--- a/style.css
+++ b/style.css
@@ -46,3 +46,20 @@ a:hover {
     background-color: black;
     color: white;
 }
+
+.hero-section {
+    height: 100px;
+    width: 100%;
+    background-color: rgb(185, 185, 250);
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+}
+.hero-intro {
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgb(255, 207, 207);
+}
