--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a:hover {
     margin: 10px;
     padding: 5px 20px;
     border-radius: 14px;
+    transition: all 0.5s ease;
 }
 
 .options a:hover {
@@ -54,6 +55,7 @@ a:hover {
     display: flex;
     align-items: center;
     margin-top: 10px;
+    
 }
 .hero-intro {
     height: 60px;
